# Payment-Gateway-with-Rust-and-Next.js

./: .env  Cargo.toml
src/: app_state.rs  main.rs  payload.rs  payment.rs
src/pages/: fail.tsx  index.tsx  success.tsx
